--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,15 +3,23 @@ owner: gekki-beep # Your GitHub organization or username, where this repository 
 repo: status-page # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-
+  - name: Gekki
+    url: https://gekki.fr
+  - name: iFive
+    url: https://ifive-community.fr
+  - name: Panel
+    url: https://ifive-community.fr/panel
+  - name: Steam
+    url: http://api.steampowered.com
+  - name: iFive DarkRP
+    check: "tcp-ping"
+    url: 51.91.215.27
+    port: 10014
+  - name: iFive CW
+    check: "tcp-ping"
+    url: 51.91.215.27
+    port: 10007
+    
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
