--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,8 +3,6 @@ owner: gekki-beep # Your GitHub organization or username, where this repository 
 repo: status-page # The name of this repository
 
 sites:
-  - name: Gekki
-    url: https://gekki.fr
   - name: iFive
     url: https://ifive-community.fr
   - name: Panel
@@ -19,6 +17,10 @@ sites:
     check: "tcp-ping"
     url: 51.91.215.27
     port: 10007
+  - name: iFive DS
+    check: "tcp-ping"
+    url: 51.91.215.27
+    port: 10010
     
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
@@ -36,5 +38,7 @@ status-website:
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
 
+i18n:
+  footer: Page de statuts pour plusieurs projets
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
