--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -41,6 +41,6 @@ status-website:
       href: https://github.com/$OWNER/$REPO
 
 i18n:
-  footer:  
+  footer: Monitoring
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
