--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -9,8 +9,12 @@ sites:
     url: https://ifive-community.fr/panel
   - name: Discord
     url: https://discord.com/api/v10
+    expectedStatusCodes:
+      - 404
   - name: Steam
     url: https://api.steampowered.com
+    expectedStatusCodes:
+      - 404
   - name: iFive DarkRP
     check: "tcp-ping"
     url: 51.91.215.27
@@ -25,6 +29,7 @@ sites:
     port: 10010
     
 status-website:
+   theme: dark
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   #cname: demo.upptime.js.org
