--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -46,6 +46,60 @@ status-website:
 
 i18n:
   footer: Monitoring
+  activeIncidents: Incidents actifs
+  allSystemsOperational: L'ensemble des systèmes sont opérationnels
+  incidentReport: "Incident #$NUMBER →"
+  activeIncidentSummary: Ouvert le $DATE avec $POSTS messages
+  incidentTitle: Détails de l\'incident $NUMBER
+  incidentDetails: Détails de l'incident
+  incidentFixed: Réparé
+  incidentOngoing: En cours
+  incidentOpenedAt: Ouvert le
+  incidentClosedAt: Fermé le
+  incidentViewOnGitHub: Voir et s'abonner sur GitHub
+  incidentCommentSummary: posté le $DATE par $AUTHOR
+  incidentBack: ← Retour à tout les incidents
+  pastIncidents: Anciens incidents
+  pastIncidentsResolved: Résolu en $MINUTES minutes avec $POSTS messages
+  liveStatus: Statut en direct
+  overallUptime: "Temps de fonctionnement global : $UPTIME"
+  overallUptimeTitle: Temps de fonctionnement global
+  averageResponseTime: "Temps de réponse moyen : $TIMEms"
+  averageResponseTimeTitle: Temps de réponse moyen
+  sevelDayResponseTime: Délai de réponse de 7 jours
+  responseTimeMs: Temps de réponse (ms)
+  up: Opérationnel
+  down: Arrêt
+  degraded: Degradé
+  ms: ms
+  loading: Chargement
+  navGitHub: GitHub
+  rateLimitExceededTitle: Limite de taux dépassée
+  rateLimitExceededIntro: Vous avez dépassé le nombre de requêtes que vous pouvez effectuer en une heure. Vous devrez donc attendre avant d'accéder à nouveau à ce site Web. Vous pouvez également ajouter un jeton d'accès personnel GitHub pour continuer à utiliser ce site Web.
+  rateLimitExceededWhatDoesErrorMean: Que signifie cette erreur ?
+  rateLimitExceededErrorMeaning: Ce site web utilise l'API GitHub pour accéder à des données en temps réel sur l'état de nos sites web. Par défaut, GitHub autorise à chaque adresse IP 60 requêtes par heure, que vous avez consommées.
+  rateLimitExceededErrorHowCanFix: Comment puis-je le réparer ?
+  rateLimitExceededErrorFix: Vous pouvez attendre une heure de plus et la limite de votre adresse IP sera rétablie. Vous pouvez également ajouter votre jeton d'accès personnel GitHub, qui vous donne droit à 5 000 demandes supplémentaires par heure.
+  rateLimitExceededGeneratePAT: Apprenez comment générer un jeton d'accès personnel
+  rateLimitExceededHasSet: Vous avez défini un jeton d'accès personnel.
+  rateLimitExceededRemoveToken: Retiré le token
+  rateLimitExceededGitHubPAT: Token d'accès personnel GitHub
+  rateLimitExceededCopyPastePAT: Copiez et collez votre jeton
+  rateLimitExceededSaveToken: Sauvegarder le token
+  errorTitle: Une erreur s'est produite
+  errorIntro: Une erreur s'est produite en essayant d'obtenir les derniers détails du statut.
+  errorText: Vous pourrez réessayer dans quelques instants.
+  errorHome: Aller à la page d'accueil
+  pastScheduledMaintenance: Maintenances programmées terminées
+  scheduledMaintenance: Maintenances programmées
+  scheduledMaintenanceSummaryStarted: Démarré le $DATE pour $DURATION minutes
+  scheduledMaintenanceSummaryStarts: Démarrés le $DATE pour $DURATION minutes
+  startedAt: Démarré le
+  startsAt: Démarrés le
+  duration: Durée
+  durationMin: $DURATION minutes
+  incidentCompleted: Complété
+  incidentScheduled: Programmé
   
   theme: dark
 # Upptime also supports notifications, assigning issues, and more
