--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -51,6 +51,7 @@ status-website:
   name: Status Page
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   introTitle: "Status Page - Yothann"
+  theme: dark
   #introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
     - title: Status
