--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -14,7 +14,7 @@ sites:
   - name: Node02
     url: https://node02.ifive-community.fr/
   - name: Node03
-    url: https://node03.ifive-community.fr/
+    url: node03.ifive-community.fr
     icon: https://cdn.discordapp.com/attachments/1075835241534587041/1081960065264787456/4K_General.jpeg
   - name: BDD
     url: https://games.ifive-community.fr/pma
