--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -16,10 +16,13 @@ sites:
     url: https://node02.ifive-community.fr/
     icon: https://cdn.discordapp.com/attachments/1075835241534587041/1081960065264787456/4K_General.jpeg
   - name: Node03
-    url: node03.ifive-community.fr
+    url: https://node03.ifive-community.fr/
     icon: https://cdn.discordapp.com/attachments/1075835241534587041/1081960065264787456/4K_General.jpeg
-  - name: BDD
+  - name: SQL01
     url: https://games.ifive-community.fr/pma
+    icon: https://cdn.discordapp.com/attachments/1075835241534587041/1081960065264787456/4K_General.jpeg
+  - name: SQL02
+    url: https://node02.ifive-community.fr/pma
     icon: https://cdn.discordapp.com/attachments/1075835241534587041/1081960065264787456/4K_General.jpeg
   - name: Gekki
     url: https://gekki.fr
