--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -6,6 +6,12 @@ sites:
   - name: iFive
     url: https://ifive-community.fr
     icon: https://cdn.discordapp.com/attachments/1075835241534587041/1081960065264787456/4K_General.jpeg
+  - name: Boutique
+    url: https://boutique.ifive-community.fr
+    icon: https://cdn.discordapp.com/attachments/1075835241534587041/1081960065264787456/4K_General.jpeg
+  - name: Wiki
+    url: https://wiki.ifive-community.fr
+    icon: https://cdn.discordapp.com/attachments/1075835241534587041/1081960065264787456/4K_General.jpeg
   - name: Panel
     url: https://panel.ifive-community.fr/
     icon: https://cdn.discordapp.com/attachments/1075835241534587041/1081960065264787456/4K_General.jpeg
@@ -14,9 +20,6 @@ sites:
     icon: https://cdn.discordapp.com/attachments/1075835241534587041/1081960065264787456/4K_General.jpeg
   - name: Node02
     url: https://node02.ifive-community.fr/
-    icon: https://cdn.discordapp.com/attachments/1075835241534587041/1081960065264787456/4K_General.jpeg
-  - name: Node03
-    url: http://node03.ifive-community.fr/
     icon: https://cdn.discordapp.com/attachments/1075835241534587041/1081960065264787456/4K_General.jpeg
   - name: SQL01
     url: https://node02.ifive-community.fr/pma
